--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install Chrome
       run: |
          sudo apt-get update
-         sodo apt-get install -y google-chrome-stable
+         sudo apt-get install -y google-chrome-stable
     - name: Install dependencies
       run: dotnet restore SeleniumBasicExercise.sin
     - name: Build
